--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </div>
         <div class=" w-[100%] md:w-[40%]  pt-4">
-          <img class="w-[100%] mt-4" src="img 1.jpg" alt="" />
+          <img class="w-[100%] mt-4" src="Images/img 1.jpg" alt="" />
         </div>
       </div>
     </div>
@@ -110,7 +110,7 @@
   <div class="flex flex-col justify-center items-center m-2 gap-3 w-[100%] md:flex-row">
    <div class=" w-[100%] md:w-[30%] bg-[#353d4b94] ">
         <div class="w-[95%] h-40 bg-[#353d4b94] m-auto">
-          <img src="product tech.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
+          <img src="Images/product tech.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
           <h2 class="text-white font-bold pl-[10px]">Product One</h2>
@@ -121,7 +121,7 @@
 
  <div class=" w-[100%] md:w-[30%] bg-[#353d4b94]">
         <div class="w-[95%] h-40 bg-[#353d4b94] m-auto">
-          <img src="3.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
+          <img src="Images/3.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
           <h2 class="text-white font-bold pl-[10px]">Product Two</h2>
@@ -131,7 +131,7 @@
 
  <div class=" w-[100%] md:w-[30%] bg-[#353d4b94]">
         <div class="w-[95%] h-40 bg-[#353d4b94] m-auto">
-          <img src="2.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
+          <img src="Images/2.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
           <h2 class="text-white font-bold pl-[10px]">Product Three</h2>
