--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body class="bg-[#101826]">
-    <div class="w-[100%] bg-blue-950">
+    <div class="w-[100%] bg-blue-950 fixed">
       <div class=" p-[20px] flex justify-between items-center mx-auto">
         <div><h1 class="text-blue-800 font-bold text-2xl">BrandName</h1></div>
 
@@ -41,8 +41,8 @@
         </div>
       </div>
     </div>
-    <div class="w-[100%] py-4 px-4 sm:px-10">
-      <div class="flex flex-col md:flex-row  justify-between items-center">
+    <div class=" pt-[100px] w-[100%] py-4 px-4 sm:px-10">
+      <div class="flex flex-col md:flex-row  justify-between items-center ">
         <div class=" w-[80%] md:w-[30%]  ">
           <h1 class="text-4xl text-amber-50 font-bold">
             Build Modern Uls Fast With
@@ -93,7 +93,7 @@
       </div>
     </div>
       </div>
-        
+
    
    
     
@@ -152,29 +152,34 @@
 <div class="w-[100%] md:">
 
 <div class="w-[100%]">
-  <div class=" w-[90%] md:w-[50%] bg-[#353d4b94] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
+  <div class=" w-[90%] h-[50vh] md:w-[50%] bg-[#353d4b94] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
     <div class="w-[100%] items-center justify-center px-4 ">
     <label for="" class="text-1xl font-bold text-white">Name</label><br>
-    <input type="text" class="bg-blue-950 w-[100%] ">
+    <input type="text" class="bg-blue-950 w-[100%] text-white ">
   </div>
   <div class="w-[100%] px-4">
     <label for="" class="text-1xl font-bold text-white">Email</label><br>
-    <input type="text" class="bg-blue-950 w-[100%]">
+    <input type="text" class="bg-blue-950 w-[100%] text-white ">
   </div>
    <div class="w-[100%] px-4">
 
   <label for="" class="text-1xl font-bold text-white">message</label><br>
-  <textarea id="comment" name="user_comment" rows="5" cols="40" placeholder="" class="w-[100%] bg-blue-950"></textarea><br>
-  
+  <textarea id="comment" name="user_comment" rows="5" cols="40" placeholder="" class="w-[100%] bg-blue-950  text-white "></textarea><br>
+  <div class="mt-4">
+<a href="" class="text-white  bg-blue-500 block text-center mx-2 rounded-2xl p-[10px] outline-0">Send message</a>
+</div> 
 
- 
 </div>
 </div>
-
+</div>
+</div>
 
    
   </body>
 </html>
+
+
+
 
 
 
