--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     />
   </head>
   <body class="bg-[#101826]">
-    <div class="w-[100%] bg-blue-950 fixed">
+    <div class="w-[100%] fixed bg-[#00000060]">
       <div class=" p-[20px] flex justify-between items-center mx-auto">
-        <div><h1 class="text-blue-800 font-bold text-2xl">BrandName</h1></div>
+        <div><h1 class="text-blue-400 font-bold text-2xl">BrandName</h1></div>
 
         <div class="flex justify-center items-center ">
      <div class="hidden md:block">
@@ -30,7 +30,7 @@
             <li>
               <a href="#" class="hover:bg-green-400 p-[5px,5px]">contact</a>
             </li>
-            <a href="" class="w-[80px] bg-blue-900 p-2 pl-3 text-white rounded-2xl ">Login</a>
+            <a href="" class="w-[80px] bg-blue-600 p-1 pl-3 text-white rounded-[5px] ">Login</a>
           </ul>
     
 
@@ -43,7 +43,7 @@
     </div>
     <div class=" pt-[100px] w-[100%] py-4 px-4 sm:px-10">
       <div class="flex flex-col md:flex-row  justify-between items-center ">
-        <div class=" w-[80%] md:w-[30%]  ">
+        <div class=" w-[90%] md:w-[42%]  ">
           <h1 class="text-4xl text-amber-50 font-bold">
             Build Modern Uls Fast With
             <span class="text-blue-700">Tailwind CSS v4</span>
@@ -52,40 +52,40 @@
             A utility-first CSS Framework packed with features to help you build
             beautiful responsive websites with ease.
           </p>
-          <div class="mt-[20px]">
-            <a href="" class="bg-blue-400 p-[10px] rounded-2xl">Get Started</a>
+          <div class="mt-[20px] mb-[30px]">
+            <a href="" class="bg-blue-600 p-[7px] px-[20px] rounded-[5px] text-white">Get Started</a>
           </div>
         </div>
-        <div class=" w-[100%] md:w-[40%]  pt-4">
-          <img class="w-[100%] mt-4" src="Images/img 1.jpg" alt="" />
+        <div class=" w-[90%] md:w-[50%] h-[300px] pt-4">
+          <img class="w-[100%] h-[100%]" src="Images/img 1.jpg" alt="" />
         </div>
       </div>
     </div>
 
-       <div class="flex justify-center items-center">
+       <div class="flex justify-center items-center mt-[40px]">
         <h1 class="text-white text-2xl font-bold">Features</h1>
        </div> 
-       <div class="flex justify-center items-center mt-[30px] gap-5">
+       <div class="flex justify-center items-center mt-[40px] gap-5 ">
 
       <div class=" flex flex-col justify-center items-center m-2 gap-3 w-[100%] md:flex-row">
 
- <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 ">
-        <span>⚡</span>
+ <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 rounded-[10px] ">
+        <span class="text-2xl">⚡</span>
         <h2 class="text-white">Blazing Fast</h2>
         <p class="text-white">
           Tailwind wie is optimised for parformance with a new engine and
           instant Bailds
         </p>
       </div>
-      <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4">
-        <span>🎨</span>
+      <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 rounded-[10px]">
+        <span class="text-2xl">🎨</span>
         <h2 class="text-white">Utility-First</h2>
         <p class="text-white">
           Compose any design directly in your HTML wung smail. enable classes
         </p>
       </div>
-      <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4">
-        <span>🌙</span>
+      <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 rounded-[10px]">
+        <span class="text-2xl">🌙</span>
         <h2 class=" text-white">Dark Mode</h2>
         <p class=" text-white">
           Built in dark mode support with simple class togging
@@ -107,36 +107,36 @@
 
 <div class="flex justify-center items-center gap-[20px] mt-10">
 
-  <div class="flex flex-col justify-center items-center m-2 gap-3 w-[100%] md:flex-row">
-   <div class=" w-[100%] md:w-[30%] bg-[#353d4b94] ">
-        <div class="w-[95%] h-40 bg-[#353d4b94] m-auto">
+  <div class="flex flex-col justify-center items-center m-2 gap-10 w-[100%] md:flex-row">
+   <div class=" w-[100%] h-100 md:w-[30%] bg-[#353d4b94] ">
+        <div class="w-[95%] h-[80%] bg-[#353d4b94] m-auto">
           <img src="Images/product tech.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
           <h2 class="text-white font-bold pl-[10px]">Product One</h2>
           <p class="text-white pl-[10px]">A modem product all were end design</p>
-          <a href="" class="text-white  bg-blue-500 block text-center mx-2 rounded-2xl mb-[10px] ">Buy Now</a>
+          <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px] ">Buy Now</a>
         </div>
       </div>
 
- <div class=" w-[100%] md:w-[30%] bg-[#353d4b94]">
-        <div class="w-[95%] h-40 bg-[#353d4b94] m-auto">
+ <div class=" w-[100%] h-100 md:w-[30%] bg-[#353d4b94]">
+        <div class="w-[95%] h-[80%] bg-[#353d4b94] m-auto">
           <img src="Images/3.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
           <h2 class="text-white font-bold pl-[10px]">Product Two</h2>
           <p class="text-white pl-[10px]">A modem product all were end design</p>
- <a href="" class="text-white  bg-blue-500 block text-center mx-2 rounded-2xl mb-[10px]">Buy Now</a>        </div>
+ <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px]">Buy Now</a>        </div>
       </div>
 
- <div class=" w-[100%] md:w-[30%] bg-[#353d4b94]">
-        <div class="w-[95%] h-40 bg-[#353d4b94] m-auto">
+ <div class=" w-[100%] h-100 md:w-[30%] bg-[#353d4b94]">
+        <div class="w-[95%] h-[80%] bg-[#353d4b94] m-auto">
           <img src="Images/2.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
           <h2 class="text-white font-bold pl-[10px]">Product Three</h2>
           <p class="text-white pl-[10px]">A modem product all were end design</p>
- <a href="" class="text-white  bg-blue-500 block text-center mx-2 rounded-2xl mb-[10px]">Buy Now</a>        </div>
+ <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px]">Buy Now</a>        </div>
       </div>
   </div>
 
@@ -152,21 +152,21 @@
 <div class="w-[100%] md:">
 
 <div class="w-[100%]">
-  <div class=" w-[90%] h-[50vh] md:w-[50%] bg-[#353d4b94] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
-    <div class="w-[100%] items-center justify-center px-4 ">
+  <div class=" w-[90%] h-[67vh] md:w-[50%] bg-[#353d4b60] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
+    <div class="w-[100%] items-center justify-center px-4 pt-[20px]">
     <label for="" class="text-1xl font-bold text-white">Name</label><br>
-    <input type="text" class="bg-blue-950 w-[100%] text-white ">
+    <input type="text" class="bg-[#101826] w-[100%] text-white py-[8px] ">
   </div>
-  <div class="w-[100%] px-4">
+  <div class="w-[100%] px-4 pt-[20px]">
     <label for="" class="text-1xl font-bold text-white">Email</label><br>
-    <input type="text" class="bg-blue-950 w-[100%] text-white ">
+    <input type="text" class="bg-[#101826] w-[100%] text-white py-[8px] ">
   </div>
-   <div class="w-[100%] px-4">
+   <div class="w-[100%] px-4 pt-[20px]">
 
   <label for="" class="text-1xl font-bold text-white">message</label><br>
-  <textarea id="comment" name="user_comment" rows="5" cols="40" placeholder="" class="w-[100%] bg-blue-950  text-white "></textarea><br>
+  <textarea id="comment" name="user_comment" rows="5" cols="40" placeholder="" class="w-[100%] bg-[#101826]  text-white "></textarea><br>
   <div class="mt-4">
-<a href="" class="text-white  bg-blue-500 block text-center mx-2 rounded-2xl p-[10px] outline-0">Send message</a>
+<a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-2xl p-[10px] outline-0">Send message</a>
 </div> 
 
 </div>
