--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <div class=" p-[20px] flex justify-between items-center mx-auto">
         <div><h1 class="text-blue-400 font-bold text-2xl">BrandName</h1></div>
 
-        <div class="flex justify-center items-center ">
+        <div class="flex justify-center items-center">
      <div class="hidden md:block">
            <ul
             class="flex justify-center items-center gap-6 text-[20px] pr-[20px]  text-white"
@@ -28,9 +28,9 @@
               <a href="#" class="hover:bg-green-400 p-[5px,5px]">Features</a>
             </li>
             <li>
-              <a href="#" class="hover:bg-green-400 p-[5px,5px]">contact</a>
+              <a href="#" class="hover:bg-green-400 p-[5px,5px]">Contact</a>
             </li>
-            <a href="" class="w-[80px] bg-blue-600 p-1 pl-3 text-white rounded-[5px] ">Login</a>
+            <a href="" class="w-[80px] bg-blue-600 p-1 pl-5 text-white rounded-[5px] text-[15px] ">Login</a>
           </ul>
     
 
@@ -48,12 +48,12 @@
             Build Modern Uls Fast With
             <span class="text-blue-700">Tailwind CSS v4</span>
           </h1>
-          <p class="text-white">
+          <p class="text-white mt-[15px]">
             A utility-first CSS Framework packed with features to help you build
             beautiful responsive websites with ease.
           </p>
           <div class="mt-[20px] mb-[30px]">
-            <a href="" class="bg-blue-600 p-[7px] px-[20px] rounded-[5px] text-white">Get Started</a>
+            <a href="" class="bg-blue-600 p-[7px] px-[20px] rounded-[5px] text-white text-[20px]">Get Started</a>
           </div>
         </div>
         <div class=" w-[90%] md:w-[50%] h-[300px] pt-4">
@@ -62,32 +62,32 @@
       </div>
     </div>
 
-       <div class="flex justify-center items-center mt-[40px]">
+       <div class="flex justify-center items-center mt-[60px]">
         <h1 class="text-white text-2xl font-bold">Features</h1>
        </div> 
-       <div class="flex justify-center items-center mt-[40px] gap-5 ">
+       <div class="flex justify-center items-center mt-[60px] gap-5 ">
 
-      <div class=" flex flex-col justify-center items-center m-2 gap-3 w-[100%] md:flex-row">
+      <div class=" flex flex-col justify-center items-center m-2 gap-10 w-[100%] md:flex-row">
 
  <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 rounded-[10px] ">
         <span class="text-2xl">⚡</span>
-        <h2 class="text-white">Blazing Fast</h2>
-        <p class="text-white">
+        <h2 class="text-white font-bold">Blazing Fast</h2>
+        <p class="text-white pt-[15px]">
           Tailwind wie is optimised for parformance with a new engine and
           instant Bailds
         </p>
       </div>
       <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 rounded-[10px]">
         <span class="text-2xl">🎨</span>
-        <h2 class="text-white">Utility-First</h2>
-        <p class="text-white">
+        <h2 class="text-white font-bold">Utility-First</h2>
+        <p class="text-white pt-[15px]">
           Compose any design directly in your HTML wung smail. enable classes
         </p>
       </div>
       <div class="w-[90%] h-[150px] text-center bg-[#353d4b94] pt-4 rounded-[10px]">
         <span class="text-2xl">🌙</span>
-        <h2 class=" text-white">Dark Mode</h2>
-        <p class=" text-white">
+        <h2 class=" text-white font-bold">Dark Mode</h2>
+        <p class=" text-white pt-[15px]">
           Built in dark mode support with simple class togging
         </p>
       </div>
@@ -102,41 +102,41 @@
 
    
       <div class="text-center">
-        <h1 class="text-2xl text-white font-bold mt-10">product showcase</h1>
+        <h1 class="text-2xl text-white font-bold mt-[80px]">Product Showcase</h1>
       </div>
 
-<div class="flex justify-center items-center gap-[20px] mt-10">
+<div class="flex justify-center items-center gap-[20px] mt-[80px]">
 
   <div class="flex flex-col justify-center items-center m-2 gap-10 w-[100%] md:flex-row">
-   <div class=" w-[100%] h-100 md:w-[30%] bg-[#353d4b94] ">
+   <div class=" w-[100%] h-150 md:w-[30%] bg-[#353d4b94] ">
         <div class="w-[95%] h-[80%] bg-[#353d4b94] m-auto">
           <img src="Images/product tech.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
-        <div>
-          <h2 class="text-white font-bold pl-[10px]">Product One</h2>
-          <p class="text-white pl-[10px]">A modem product all were end design</p>
-          <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px] ">Buy Now</a>
+        <div class="">
+          <h2 class="text-white font-bold pl-[10px] mt-[20px]">Product One</h2>
+          <p class="text-white pl-[10px] ">A modem product all were end design</p>
+          <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px] p-1 mt-[10px] ">Buy Now</a>
         </div>
       </div>
 
- <div class=" w-[100%] h-100 md:w-[30%] bg-[#353d4b94]">
+ <div class=" w-[100%] h-150 md:w-[30%] bg-[#353d4b94]">
         <div class="w-[95%] h-[80%] bg-[#353d4b94] m-auto">
           <img src="Images/3.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
-          <h2 class="text-white font-bold pl-[10px]">Product Two</h2>
+          <h2 class="text-white font-bold pl-[10px] mt-[20px]">Product Two</h2>
           <p class="text-white pl-[10px]">A modem product all were end design</p>
- <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px]">Buy Now</a>        </div>
+ <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px] p-1 mt-[10px]">Buy Now</a>        </div>
       </div>
 
- <div class=" w-[100%] h-100 md:w-[30%] bg-[#353d4b94]">
+ <div class=" w-[100%] h-150 md:w-[30%] bg-[#353d4b94]">
         <div class="w-[95%] h-[80%] bg-[#353d4b94] m-auto">
           <img src="Images/2.jpg" class="w-[100%] h-[95%] object-cover pt-2" alt="">
         </div>
         <div>
-          <h2 class="text-white font-bold pl-[10px]">Product Three</h2>
+          <h2 class="text-white font-bold pl-[10px] mt-[20px]">Product Three</h2>
           <p class="text-white pl-[10px]">A modem product all were end design</p>
- <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px]">Buy Now</a>        </div>
+ <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-[8px] mb-[10px] p-1 mt-[10px]">Buy Now</a>        </div>
       </div>
   </div>
 
@@ -146,12 +146,12 @@
 
 
    <div class=" w-[100%] mx-auto mt-[40px]">
-    <h1 class="text-2xl text-white font-bold text-center">contact</h1>
+    <h1 class="text-2xl text-white font-bold text-center mt-[80px]">Contact</h1>
    </div>
 
 <div class="w-[100%] md:">
 
-<div class="w-[100%]">
+<div class="w-[100%] mt-[80px]">
   <div class=" w-[90%] h-[67vh] md:w-[50%] bg-[#353d4b60] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
     <div class="w-[100%] items-center justify-center px-4 pt-[20px]">
     <label for="" class="text-1xl font-bold text-white">Name</label><br>
@@ -163,7 +163,7 @@
   </div>
    <div class="w-[100%] px-4 pt-[20px]">
 
-  <label for="" class="text-1xl font-bold text-white">message</label><br>
+  <label for="" class="text-1xl font-bold text-white">Message</label><br>
   <textarea id="comment" name="user_comment" rows="5" cols="40" placeholder="" class="w-[100%] bg-[#101826]  text-white "></textarea><br>
   <div class="mt-4">
 <a href="" class="text-white  bg-blue-600 block text-center mx-2 rounded-2xl p-[10px] outline-0">Send message</a>
@@ -177,6 +177,9 @@
    
   </body>
 </html>
+
+
+
 
 
 
