--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <div class="w-[100%] md:">
 
 <div class="w-[100%] mt-[80px]">
-  <div class=" w-[90%] h-[67vh] md:w-[50%] bg-[#353d4b60] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
+  <div class=" w-[90%] h-[50vh] md:h-[67vh] md:w-[50%] bg-[#353d4b60] items-center justify-center m-auto mt-[40px] mb-[20px]"> 
     <div class="w-[100%] items-center justify-center px-4 pt-[20px]">
     <label for="" class="text-1xl font-bold text-white">Name</label><br>
     <input type="text" class="bg-[#101826] w-[100%] text-white py-[8px] ">
