--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
            </div>
         </div>
 
-        <div class="relative  w-[100px] h-[100px] mr-[40px] text-white text-2xl block md:hidden group cursor-pointer">
-  <i class="fa-solid fa-bars text-black flex items-center justify-center h-full"></i>
+        <div class="relative text-2xl block md:hidden group cursor-pointer">
+  <i class="fa-solid fa-bars text-white  flex items-center justify-center h-full"></i>
 
   <!-- Dropdown -->
-  <div class="absolute top-full right-6 bg-amber-100 text-black p-2 hidden group-hover:block z-10">
+  <div class="absolute top-full right-2 bg-amber-100 text-black p-2 hidden group-hover:block z-10">
     <h1 class="py-1 px-2 hover:bg-amber-200">Home</h1>
     <h1 class="py-1 px-2 hover:bg-amber-200">About</h1>
   </div>
