--- a/index.html
+++ b/index.html
@@ -42,8 +42,18 @@
 
   <!-- Dropdown -->
   <div class="absolute top-full right-2 bg-amber-100 text-black p-2 hidden group-hover:block z-10">
-    <h1 class="py-1 px-2 hover:bg-amber-200">Home</h1>
-    <h1 class="py-1 px-2 hover:bg-amber-200">About</h1>
+     <ul
+            class="flex justify-center items-center gap-6 text-[20px] pr-[20px]  text-white"
+          >
+            <li><a href="#" class="hover:bg-green-400 p-[5px,5px]">Home</a></li>
+            <li>
+              <a href="#" class="hover:bg-green-400 p-[5px,5px]">Features</a>
+            </li>
+            <li>
+              <a href="#" class="hover:bg-green-400 p-[5px,5px]">Contact</a>
+            </li>
+            <a href="" class="w-[80px] bg-blue-600 p-1 pl-5 text-white rounded-[5px] text-[15px] ">Login</a>
+          </ul>
   </div>
 </div>
 
