--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
   <!-- Dropdown -->
   <div class="absolute top-full right-2 bg-amber-100 text-black p-2 hidden group-hover:block z-10">
      <ul
-            class="flex justify-center items-center gap-6 text-[20px] pr-[20px]  text-white"
+            class="text-[20px] pr-[20px]"
           >
-            <li><a href="#" class="hover:bg-green-400 p-[5px,5px]">Home</a></li>
+            <li><a href="#" class="p-[5px,5px]">Home</a></li>
             <li>
-              <a href="#" class="hover:bg-green-400 p-[5px,5px]">Features</a>
+              <a href="#" class="p-[5px,5px]">Features</a>
             </li>
             <li>
-              <a href="#" class="hover:bg-green-400 p-[5px,5px]">Contact</a>
+              <a href="#" class=" p-[5px,5px]">Contact</a>
             </li>
             <a href="" class="w-[80px] bg-blue-600 p-1 pl-5 text-white rounded-[5px] text-[15px] ">Login</a>
           </ul>
