--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <li>
               <a href="#" class=" p-[5px,5px]">Contact</a>
             </li>
-            <a href="" class="w-[80px] bg-blue-600 p-1 pl-5 text-white rounded-[5px] text-[15px] ">Login</a>
+            <a href="" class="w-[80px] bg-blue-600 p-1 text-white rounded-[5px] text-[15px] ">Login</a>
           </ul>
   </div>
 </div>
